@@ -7,6 +7,7 @@ Post-v21.03.0
     (This may take testing and tuning to be effective.)  This version of OVN
     requires DDLog 0.36.
   - Introduce ovn-controller incremetal processing engine statistics
+  - Bypass connection tracking for ACL "allow" action processing.
 
 OVN v21.03.0 - 12 Mar 2021
 -------------------------
